# aegis-sdk

./: .gitignore  README.md  build.gradle.kts  package.json  settings.gradle.kts
go/: README.md  advanced.go  adversaflow.go  aegis.go  agent.go  ai_act.go  analytics.go  anomaly.go  api_keys.go  classify.go  client.go  client_test.go  defense.go  dreamdojo.go  errors.go  errors_test.go  escalations.go  evidence.go  evolution.go  go.mod  guard_model.go  guardnet.go  helpers.go  jailbreak.go  judge.go  korean.go  military.go  ml.go  models_test.go  multimodal.go  nlp.go  ops.go  orchestration.go  pipeline.go  reports.go  rules.go  saber.go  safety.go  token_monitor.go  v3_analytics.go
go/apierrors/: errors.go
go/internal/: transport.go
go/models/: advanced.go  adversaflow.go  agent.go  anomaly.go  common.go  defense.go  escalations.go  evolution.go  guardnet.go  judge.go  multimodal.go  rules.go  saber.go  safety.go
go/pagination/: paginator.go
go/scripts/: codegen.sh
go/streaming/: reader.go
integrations/openclaw/: README.md  claw.json  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
java/: README.md  build.gradle.kts  settings.gradle.kts
javascript/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
openapi/: README.md  openapi.json
python/: README.md  pyproject.toml
python/examples/quickstart/: README.md  main.py  run.sh
python/scripts/: codegen.sh
python/src/aegis/: __init__.py  _pagination.py  _streaming.py  _transport.py  client.py  config.py  errors.py
python/src/aegis/_generated/: __init__.py  models.py
python/src/aegis/models/: __init__.py  advanced.py  adversaflow.py  agent.py  ai_act.py  analytics.py  anomaly.py  api_keys.py  classify.py  defense.py  escalations.py  evidence.py  evolution.py  jailbreak.py  judge.py  ml.py  multimodal.py  ops.py  rules.py  saber.py  safety.py
python/src/aegis/resources/: __init__.py  _base.py  advanced.py  adversaflow.py  agent.py  ai_act.py  analytics.py  anomaly.py  api_keys.py  classify.py  defense.py  dreamdojo.py  escalations.py  evidence.py  evolution.py  guard_model.py  guardnet.py  jailbreak.py  judge.py  korean.py  military.py  ml.py  multimodal.py  nlp.py  ops.py  orchestration.py  pipeline.py  reports.py  rules.py  saber.py  safety.py  token_monitor.py  v3_analytics.py
python/tests/: test_client.py  test_errors.py  test_models.py  test_transport.py
rust/: Cargo.toml  README.md
rust/examples/quickstart/: Cargo.toml  README.md  run.sh
rust/examples/quickstart/src/: main.rs
rust/scripts/: codegen.sh
rust/src/: client.rs  config.rs  error.rs  lib.rs  pagination.rs  streaming.rs  transport.rs
rust/src/models/: agent.rs  anomaly.rs  common.rs  defense.rs  escalations.rs  judge.rs  mod.rs  rules.rs  saber.rs  safety.rs
rust/src/resources/: advanced.rs  adversaflow.rs  agent.rs  ai_act.rs  analytics.rs  anomaly.rs  api_keys.rs  classify.rs  defense.rs  dreamdojo.rs  escalations.rs  evidence.rs  evolution.rs  guard_model.rs  guardnet.rs  jailbreak.rs  judge.rs  korean.rs  military.rs  ml.rs  mod.rs  multimodal.rs  nlp.rs  ops.rs  orchestration.rs  pipeline.rs  reports.rs  rules.rs  saber.rs  safety.rs  token_monitor.rs  v3_analytics.rs
rust/tests/: test_client.rs  test_errors.rs  test_models.rs
tests/sdk-smoke/rust/: Cargo.toml  orchestration_full.rs
(+122 files in other folders)
