[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-sdk"
version = "0.1.0"
description = "Official Python SDK for the AEGIS Defense API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "AEGIS Team", email = "aegis@yatavent.com" },
]
keywords = ["aegis", "ai-security", "llm-safety", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "httpx-sse>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.30",
    "respx>=0.21",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://aiaegis.io"
Documentation = "https://docs.aiaegis.io/sdk/python"
Repository = "https://github.com/ai-aegis-yatav/aegis-sdk"
Changelog = "https://github.com/ai-aegis-yatav/aegis-sdk/blob/main/python/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
