[workspace]

[package]
name = "aegis-sdk-smoke-rs"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# Install from GitHub (requires root Cargo workspace in the external repo).
# For local testing override with: AEGIS_SDK_RS_PATH=/path/to/aegis-sdk/rust cargo run
aegis-sdk = { git = "https://github.com/ai-aegis-yatav/aegis-sdk.git", branch = "main" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "orchestration_full"
path = "orchestration_full.rs"
